kubernetes/homepage/home-dep.yml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    istio.io/dataplane-mode: ambient
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      restartPolicy: Always
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v2.1.2@sha256:da9dca9ec258c628146bed1445da0853f2b88f0b10bafd97c091de807c363d60
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: host-configs
              mountPath: /app/config/
      volumes:
        - name: host-configs
          hostPath:
            path: /data/homepage
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-http-route
  namespace: homepage
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-ingress
    - name: pangolin-gateway
      namespace: istio-ingress
  hostnames:
    - home.alexmickelson.guru
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
